# music_algo

./: .gitignore  CMakeLists.txt  readme.md
midi/src/: Binasc.cpp  MidiEvent.cpp  MidiFile.cpp  MidiMessage.cpp
src/: CMakeLists.txt  main.cpp  utils.h
